# payments-manager

./: .gitignore  Makefile  README.md  app.py  flow.md  pyproject.toml
infra/deployment/: Dockerfile  deployment.yaml
infra/development/: Dockerfile.development  development.yaml  entrypoint.development.sh
scripts/deployment/: build.sh  setup.sh
scripts/development/: development-build.sh
src/common/: config.py
