[tool.poetry]
name = "payments-manager"
version = "0.1.0"
description = "Payments Manager that uses Razorpay"
authors = ["Namah <shresthanamah@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
